# openapi-extract

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  generics.rs  index.rs  lib.rs  main.rs  merger.rs  preprocessor.rs  scanner.rs  visitor.rs
tests/: integration_test.rs
